test/memory/shannon/reallocWithoutMalloc.good
reallocWithoutMalloc.chpl:1: error: Attempting to realloc memory for int64_t that wasn't allocated
